objects/Class__c.object
<CustomObject><fields>
        <fullName>ActualCountofEnrollments__c</fullName>
        <description>Actual Count of Enrollments regardless of the Status.  This Rollup Summary Field is used in Validation Rule.  The rule will prevent the deletion of a Class if there are any enrollments associated to the class.</description>
        <label>Actual Count of Enrollments</label>
        <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Additional_Seats_Taken__c</fullName>
        <description>This field will be used by training admins to enter the additional seats taken if the contact details are not available</description>
        <label>Additional Seats Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cancel_Venue_By__c</fullName>
        <formula>IF(NOT(ISBLANK(Training_Location__c)),Start_Date__c -  Training_Location__r.Cancellation_Lead_Time__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date that venue must be cancelled by if the class will not be offered</inlineHelpText>
        <label>Cancel Venue By</label>
        <type>Date</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <formula>Training_Location__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ClassCriteriaBE__c</fullName>
        <formula>Course__r.Course_Code__c+Format_Of_Class__c+Language__r.Language_Code__c</formula>
        <label>ClassCriteriaBE</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Format_Code__c</fullName>
        <formula>IF
  (
    ISPICKVAL(Class_Format__c, "Instructor Led Classroom"), "ILC" 
     ,IF
       (ISPICKVAL(Class_Format__c, "Instructor Led Online"), "ILO" 
       , IF
          (ISPICKVAL(Class_Format__c, "Self-Paced Online"), "SPO" 
        ,  IF
           (ISPICKVAL(Class_Format__c, "Certification"), "CERT" , ""
           )
          )
        )
  )</formula>
        <label>Class Format Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Format_Email_Template__c</fullName>
        <description>This field will be used to derive the email template name</description>
        <formula>IF
  (
    ISPICKVAL(Class_Format__c, "Instructor Led Classroom"), "IL_Classroom" 
     ,IF
       (ISPICKVAL(Class_Format__c, "Instructor Led Online"), "IL_Online" 
       , IF
          (ISPICKVAL(Class_Format__c, "Self-Paced Online"), "Self_Paced_Online" 
        ,  IF
           (ISPICKVAL(Class_Format__c, "Certification"), "Certification" , ""
           )
          )
        )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Format Email Template</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Class_Format__c</fullName>
        <label>Class Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor Led Classroom</fullName>
                </value>
                <value>
                    <fullName>Instructor Led Online</fullName>
                </value>
                <value>
                    <fullName>Self-Paced Online</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Class_Type__c</fullName>
        <description>To determine if the class is Public training or Customer Site Training</description>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Class_URL__c</fullName>
        <label>Class URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Commerce_Orderable__c</fullName>
        <description>Commerce orderable should be set to true if Class and Location and Course are all active.</description>
        <formula>AND(
	OR(
		ISPICKVAL(Status__c , 'Active')
		,ISPICKVAL(Status__c , 'Completed')
	)
	,ISPICKVAL(Class_Type__c , 'Public')        
	,ISPICKVAL(Course__r.Status__c , 'Active')
	,OR(
		OR( 
			ISPICKVAL(Class_Format__c, 'Instructor Led Online')
			,ISPICKVAL(Class_Format__c, 'Self-Paced Online')	 
		)
		,AND(
			OR( 
				ISPICKVAL(Class_Format__c, 'Instructor Led Classroom')
				,ISPICKVAL(Class_Format__c, 'Certification') 
			)
			,ISPICKVAL(Training_Location__r.Status__c, 'Active')
		)
	)
)</formula>
        <label>Commerce Orderable</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <formula>Training_Location__r.Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Code__c</fullName>
        <label>Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Default_Duration__c</fullName>
        <inlineHelpText>Default duration of enrollments (in days) when not registered through a Training Agreement</inlineHelpText>
        <label>Default Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Display_End_Date__c</fullName>
        <formula>text(DAY(  End_Date__c  )) +'-'+ CASE( MONTH(  End_Date__c  ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +'-'+ Text(YEAR(  End_Date__c  ))</formula>
        <label>Display End Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_Exam_Date__c</fullName>
        <formula>text(DAY(   Exam_Date__c  )) +'-'+ CASE( MONTH(  Exam_Date__c  ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +'-'+ Text(YEAR(  Exam_Date__c  ))</formula>
        <label>Display Exam Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Display_Start_Date__c</fullName>
        <formula>text(DAY(  Start_Date__c  )) +'-'+ CASE( MONTH(  Start_Date__c  ) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec") +'-'+ Text(YEAR(  Start_Date__c  ))</formula>
        <label>Display Start Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <description>End Date to be used on the Quick Action. End Date/Time will be on the Layouts with the Time defaulted based on Sponsor Office.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>English_Survey_URL__c</fullName>
        <description>English Survey URL unique to the Class</description>
        <formula>IF ((OR(ISPICKVAL( Class_Format__c , "Instructor Led Online"), ISPICKVAL( Class_Format__c , "Instructor Led Classroom"))), $Setup.Training_Agreement_Settings__c.Training_L1_English_Survey_Link__c + '?ClassID=' + Id +'&amp;Instructor=' +Primary_Instructor__c , '')</formula>
        <inlineHelpText>English Survey URL unique to the Class</inlineHelpText>
        <label>English Survey URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Enrollee_Seats_Taken__c</fullName>
        <label>Enrollee Seats Taken</label>
        <summaryFilterItems>
            <field>Enrollment__c.Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Completed, Registered, Registered - Awaiting Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Enrollment_Survey_Sent_Date__c</fullName>
        <description>The minimum value of survey sent date from child enrollments</description>
        <label>Enrollment Survey Sent Date</label>
        <summarizedField>Enrollment__c.Survey_Training_Survey_Last_Sent__c</summarizedField>
        <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Exam_Date_For_Template__c</fullName>
        <formula>CASE( MONTH(Exam_Date__c) , 
1, "Jan", 
2, "Feb", 
3, "Mar", 
4, "Apr", 
5, "May", 
6, "Jun", 
7, "Jul", 
8, "Aug", 
9, "Sep", 
10, "Oct", 
11, "Nov", 
"Dec")+' '+text(DAY(Exam_Date__c))+', '+Text(YEAR( Exam_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Date For Template</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Exam_Date__c</fullName>
        <label>Exam Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <summarizedField>Enrollment__c.Seat_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Enrollment__c.Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Completed, Registered - Awaiting Payment, Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Expiration_Reminder__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Days before the class enrollment expires that an email reminder should be sent to the enrollee</inlineHelpText>
        <label>Expiration Reminder</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Format_Of_Class__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format Of Class</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Guaranteed_to_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guaranteed to Run</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Instructor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Classes_Instructor</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Location_Type__c</fullName>
        <formula>TEXT(Training_Location__r.Location_Type__c)</formula>
        <label>Location Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Max_Seats__c</fullName>
        <label>Max Seats</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Open_Seats__c</fullName>
        <formula>Max_Seats__c  -   Total_Seats_Taken__c</formula>
        <label>Open Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Primary_Instructor_Email__c</fullName>
        <formula>Primary_Instructor__r.Email</formula>
        <label>Primary Instructor Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>PrimInstClasses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Proctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proctor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes (Proctor)</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Publish_To_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish To Web</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Seat_Price__c</fullName>
        <label>Seat Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Secondary_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes (Secondary Instructor)</relationshipLabel>
        <relationshipName>SecInstClasses</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Send_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Certificate</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_Enrollment_Surveys__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Enrollment Surveys</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Send_to_TDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will use to send data to TDS</description>
        <label>Send to TDS</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Source_Table__c</fullName>
        <formula>'Class'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Table</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Display_Name__c</fullName>
        <description>Sponsor Office Display Name to be used for Enrollment Email Notifications. (The related object Sponsor Office cannot be accessed from the email Template).</description>
        <formula>Sponsor_Office__r.Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sponsor Office Display Name to be used for Enrollment Email Notifications.</inlineHelpText>
        <label>Sponsor Office Display Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Email__c</fullName>
        <description>Sponsor Office Email to be used for Enrollment Email Notifications. (The related object Sponsor Office cannot be accessed from the email Template).</description>
        <formula>Sponsor_Office__r.Email__c</formula>
        <inlineHelpText>Sponsor Office Email to be used for Enrollment Email Notifications.</inlineHelpText>
        <label>Sponsor Office Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Phone__c</fullName>
        <description>Sponsor Office Name to be used for Enrollment Email Notifications. (The related object Sponsor Office cannot be accessed from the email Template).</description>
        <formula>Sponsor_Office__r.Phone__c</formula>
        <inlineHelpText>Sponsor Office Phone to be used for Enrollment Email Notifications.</inlineHelpText>
        <label>Sponsor Office Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Region__c</fullName>
        <formula>TEXT( Sponsor_Office__r.Region__c )</formula>
        <label>Sponsor Office Region</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Signature__c</fullName>
        <description>Sponsor Office Signature to be used for Enrollment Email Notifications. (The related object Sponsor Office cannot be accessed from the email Template).</description>
        <formula>SUBSTITUTE(Sponsor_Office__r.Signature__c, '&lt;br/&gt;', '')</formula>
        <inlineHelpText>Sponsor Office Signature to be used for Enrollment Email Notifications.</inlineHelpText>
        <label>Sponsor Office Signature</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office_Training_URL__c</fullName>
        <formula>Sponsor_Office__r.Training_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sponsor Office Training URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sponsor_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Office</label>
        <referenceTo>Sponsor_Office__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date to be used on the Quick Action. Start Date/Time will be on the Layouts with the Time defaulted based on Sponsor Office.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <formula>Training_Location__r.State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Mark for Deletion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Time_Zone_Canonical__c</fullName>
        <label>Time Zone Canonical</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Time_Zone</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Total_Seats_Taken__c</fullName>
        <formula>Additional_Seats_Taken__c  +  Enrollee_Seats_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Seats Taken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Training_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location</label>
        <referenceTo>Training_Location__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Virtual_Meeting_Info__c</fullName>
        <label>Virtual Meeting Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Waitlist_Count__c</fullName>
        <label>Waitlist Count</label>
        <summaryFilterItems>
            <field>Enrollment__c.Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Waitlisted</value>
        </summaryFilterItems>
        <summaryForeignKey>Enrollment__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Webstore_Orderable__c</fullName>
        <description>Webstore orderable flag should be set to true if Class and location and course are active and published to web</description>
        <formula>AND(
	ISPICKVAL(Status__c , 'Active')
	,ISPICKVAL(Class_Type__c , 'Public')        
	,ISPICKVAL(Course__r.Status__c , 'Active')
	,Course__r.Publish_to_Web__c
	,Publish_To_Web__c
	,OR(
		OR( 
			ISPICKVAL(Class_Format__c, 'Instructor Led Online')
			,ISPICKVAL(Class_Format__c, 'Self-Paced Online')	 
		)
		,AND(
			OR( 
				ISPICKVAL(Class_Format__c, 'Instructor Led Classroom')
				,ISPICKVAL(Class_Format__c, 'Certification') 
			)
			,ISPICKVAL(Training_Location__r.Status__c, 'Active')
			,Training_Location__r.Publish_To_Web__c
		)
	)
)</formula>
        <label>Webstore Orderable</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>local_language_survey_url__c</fullName>
        <description>displays the Survey URL for the Survey in the language of the Calss</description>
        <formula>IF ((OR(ISPICKVAL( Class_Format__c , "Instructor Led Online"), ISPICKVAL( Class_Format__c , "Instructor Led Classroom"))), Language__r.Training_L1_Survey_Link__c +'?ClassID='+Id +'&amp;Instructor=' + Primary_Instructor__c , '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Language Survey URL</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Class</label><nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Classes</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Language__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Training_Location__c</columns>
        <columns>Seat_Price__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Max_Seats__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Self_Paced_Online_Classes</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Status__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Class_URL__c</columns>
        <columns>Total_Seats_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Self-Paced Online</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Self_Paced</value>
        </filters>
        <label>Self Paced Online Classes</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Certification_Exams</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Training_Location__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Certification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:180</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Exam</value>
        </filters>
        <label>Upcoming Certification Exams</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Instructor_Led_Classroom</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Training_Location__c</columns>
        <columns>Status__c</columns>
        <columns>Publish_To_Web__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Instructor Led Classroom</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Instructor_Led</value>
        </filters>
        <label>Upcoming Instructor Led Classroom</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Instructor_Led_Classroom_AMER</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Training_Location__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Publish_To_Web__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Instructor Led Classroom</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Instructor_Led</value>
        </filters>
        <filters>
            <field>Sponsor_Office_Region__c</field>
            <operation>equals</operation>
            <value>AMER</value>
        </filters>
        <label>Upcoming Instructor Led Classroom (AMER)</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Instructor_Led_Classroom_APAC</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Training_Location__c</columns>
        <columns>City__c</columns>
        <columns>Status__c</columns>
        <columns>Publish_To_Web__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Instructor Led Classroom</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Instructor_Led</value>
        </filters>
        <filters>
            <field>Sponsor_Office__c</field>
            <operation>equals</operation>
            <value>AU,JP,KR,IN,CN</value>
        </filters>
        <label>Upcoming Instructor Led Classroom (APAC)</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Instructor_Led_Classroom_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Training_Location__c</columns>
        <columns>City__c</columns>
        <columns>Status__c</columns>
        <columns>Publish_To_Web__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Instructor Led Classroom</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Instructor_Led</value>
        </filters>
        <filters>
            <field>Sponsor_Office_Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>Upcoming Instructor Led Classroom (EMEA)</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Upcoming_Instructor_Led_Online</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Guaranteed_to_Run__c</columns>
        <columns>Class_Format__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Max_Seats__c</columns>
        <columns>Open_Seats__c</columns>
        <columns>Total_Seats_Taken__c</columns>
        <columns>Sponsor_Office__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Format__c</field>
            <operation>equals</operation>
            <value>Instructor Led Online</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Class__c.Distance_Learning</value>
        </filters>
        <label>Upcoming Instructor Led Online</label>
        <language>en_US</language>
    </listViews>    </validationRules></CustomObject>